#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-14
2013-09-18 Andy Salnikov
- allow constructor arguments with dest=none, implementation of a constructor
  should be provided separately

Tag: V00-08-13
2013-09-18 Andy Salnikov
- allow generation of _sizeof() for few additional types

Tag: V00-08-12
2013-08-26 Andy Salnikov
- add support for auto-constructors with inheritance

Tag: V00-08-11
2013-08-26 Andy Salnikov
- add support for auto-constructors for complex types
- also define copy constructors and assignment op for types which can
  implement them, disable for others

Tag: V00-08-10
2013-08-14 Andy Salnikov
- fix policy for methods returning reference to non-copyable type

Tag: V00-08-09
2013-08-01 Andy Salnikov
- finish implementation of HDF5 writing piece

Tag: V00-08-08
2013-07-29 Andy Salnikov
- add empty implementation of store_Type_vN() methods

Tag: V00-08-07
2013-07-17 David Schneider
- In the python wrappers, psddl_pytyon, creating docstrings for classes and methods 
  by passing the DDL comments to the appropriate boost python method.

Tag: V00-08-06
2013-07-17 David Schneider
- Exporting the pstype version and TypeId into the python wrappers.

Tag: V00-08-05
2013-07-16 Andy Salnikov
- psana backend:
  - get rid of pragma pack
  - do not generate overloaded methods for ndarray return type

Tag: V00-08-04
2013-07-16 Andy Salnikov
- few small fixed for problems noticed by pylint
- add comments to the methods returning ndarrays concerning lifetime
  of the returned objects

Tag: V00-08-03
2013-07-11 Andy Salnikov
- move some pieces of code from DdlPds2Psana.py into data/templates/pds2psana.tmpl

Tag: V00-08-02