@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-15
+2013-09-24 Andy Salnikov
+- small improvements to code generation, helps with most recent addition
+  of BldDataAcqADCV1 to DDL
+- this does not touch anything in pdsdata backend
+
 Tag: V00-08-14
 2013-09-18 Andy Salnikov
 - allow constructor arguments with dest=none, implementation of a constructor
